Updated for null safety